--- a/site/pages/v4/design/images-en.hbs
+++ b/site/pages/v4/design/images-en.hbs
@@ -4,7 +4,7 @@
 	"language": "en",
 	"altLangPrefix": "images",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-07-03"
+	"dateModified": "2014-07-22"
 }
 ---
 <span class="wb-prettify all-pre"></span>
@@ -44,7 +44,7 @@
 			<section>
 				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
-					<li><a href="../accessibility/images-en.html">Images<span class="wb-inv"> - Accessibility guide</span></a></li>
+					<li><a href="../accessibility/guide-en.html#images">Images<span class="wb-inv"> - Accessibility guide</span></a></li>
 				</ul>
 			</section>
 
@@ -60,7 +60,7 @@
 
 <section class="mrgn-lft-md mrgn-rght-md">
    <h2 class="page-header" id="description">Description</h2>
-   <p>An image is a static two dimensional visual artifact that is a type of non-text content classified as <a href="../accessibility/images-en.html#decorative">decorative</a>, <a href="../accessibility/images-en.html#simple">simple</a>, <a href="../accessibility/images-en.html#complex">complex</a>, or an <a href="../accessibility/images-en.html#text">image of text</a>.</p>
+   <p>An image is a static two dimensional visual artifact that is a type of non-text content classified as decorative, simple, complex, or an image of text.</p>
 </section>
 
 <section>
