Removed extra greater-than character from the panels guidance
Fixes #178

--- a/site/pages/v4/design/panels-en.hbs
+++ b/site/pages/v4/design/panels-en.hbs
@@ -350,7 +350,7 @@
 
 	<section class="panel panel-default">
 		<header class="panel-heading">
-			<h3>Panel heading</h3>>
+			<h3>Panel heading</h3>
 		</header>
 		<div class="panel-body">
 			<p>Some default panel content here. Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
