Removed rowspans and colspans
Fixes #181

--- a/site/pages/v4/design/tables-en.hbs
+++ b/site/pages/v4/design/tables-en.hbs
@@ -4,7 +4,7 @@
 	"language": "en",
 	"altLangPrefix": "tables",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-07-09"
+	"dateModified": "2014-07-24"
 }
 ---
 <span class="wb-prettify all-pre"></span>
@@ -191,15 +191,15 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td rowspan="2">1</td>
+				<td>1</td>
 				<td>Mark</td>
 				<td>Otto</td>
-				<td>@mdo</td>
-			</tr>
-			<tr>
-				<td>Mark</td>
-				<td>Otto</td>
-				<td>@TwBootstrap</td>
+				<td>
+					<ul class="list-unstyled">
+						<li>@mdo</li>
+						<li>@TwBootstrap</li>
+					</ul>
+				</td>
 			</tr>
 			<tr>
 				<td>2</td>
@@ -209,7 +209,8 @@
 			</tr>
 			<tr>
 				<td>3</td>
-				<td colspan="2">Larry the Bird</td>
+				<td>Larry the Bird</td>
+				<td>the Bird</td>
 				<td>@twitter</td>
 			</tr>
 		</tbody>
@@ -262,7 +263,8 @@
 			</tr>
 			<tr>
 				<td>3</td>
-				<td colspan="2">Larry the Bird</td>
+				<td>Larry</td>
+				<td>the Bird</td>
 				<td>@twitter</td>
 			</tr>
 			</tbody>
@@ -315,7 +317,8 @@
 			</tr>
 			<tr>
 				<td>3</td>
-				<td colspan="2">Larry the Bird</td>
+				<td>Larry</td>
+				<td>the Bird</td>
 				<td>@twitter</td>
 			</tr>
 		</tbody>
