Cleanup: Fix indenting and invalid heading level

--- a/site/pages/v4/design/images-en.hbs
+++ b/site/pages/v4/design/images-en.hbs
@@ -24,14 +24,14 @@
 					<li><a href="#media">Media objects</a></li>
 				</ul>
 			</div>
-		</section>
+		</div>
 	</section>
 
 	<section class="col-md-4 pull-right mrgn-bttm-lg">
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related</h2>
 			<section>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span>Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="visible-en.html#replacement">Icons<span class="wb-inv"> - Design guide</span></a></li>
 					<li><a href="visible-en.html#replacement">Image replacement<span class="wb-inv"> - Design guide</span></a></li>
@@ -42,14 +42,14 @@
 			</section>
 
 			<section>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../accessibility/guide-en.html#images">Images<span class="wb-inv"> - Accessibility guide</span></a></li>
 				</ul>
 			</section>
 
 			<section>
-				<h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+				<h3 class="h4"><span class="fa fa-font text-muted"></span>Writing guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../writing/principals-en.html#image">Images<span class="wb-inv"> - Writing guide</span></a></li>
 				</ul>
@@ -59,8 +59,8 @@
 </div>
 
 <section class="mrgn-lft-md mrgn-rght-md">
-   <h2 class="page-header" id="description">Description</h2>
-   <p>An image is a static two dimensional visual artifact that is a type of non-text content classified as decorative, simple, complex, or an image of text.</p>
+	<h2 class="page-header" id="description">Description</h2>
+	<p>An image is a static two dimensional visual artifact that is a type of non-text content classified as decorative, simple, complex, or an image of text.</p>
 </section>
 
 <section>
@@ -92,7 +92,7 @@
 			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
-   </div>
+	</div>
 </section>
 
 <section>
@@ -176,7 +176,8 @@
 			</section>
 
 			<section class="col-md-6 brdr-lft">
-				<h4 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h>
+				<h4 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span>
+				</h>
 				<p>(Info goes here)</p>
 			</section>
 		</div>
@@ -304,7 +305,7 @@
 				<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
 			</div>
 		</section>
- 
+
 		<section class="media">
 			<a class="pull-left" href="#">
 				<img class="media-object" src="http://placehold.it/64x64" alt="Generic placeholder image" />
@@ -321,11 +322,11 @@
 						<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
 					</div>
 				</section>
-			</section>
 		</section>
+	</section>
 
-		<div class="mrgn-tp-lg">
-			<pre><code>&lt;section class=&quot;media&quot;&gt;
+	<div class="mrgn-tp-lg">
+		<pre><code>&lt;section class=&quot;media&quot;&gt;
 	&lt;a class=&quot;pull-left&quot; href=&quot;#&quot;&gt;
 		&lt;img class=&quot;media-object&quot; src=&quot;http://placehold.it/64x64&quot; alt=&quot;Generic placeholder image&quot; /&gt;
 	&lt;/a&gt;
@@ -343,84 +344,84 @@
 		&lt;/section&gt;
 	&lt;/section&gt;
 &lt;/section&gt;</code></pre>
-		</div>
+	</div>
 
-		<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-			<section class="col-md-6">
-				<h4 class="mrgn-tp-0 text-success">Use when <span class="glyphicon glyphicon-ok-circle"></span></h4>
-				<p>(Info goes here)</p>
+	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+		<section class="col-md-6">
+			<h4 class="mrgn-tp-0 text-success">Use when <span class="glyphicon glyphicon-ok-circle"></span></h4>
+			<p>(Info goes here)</p>
+		</section>
+
+		<section class="col-md-6 brdr-lft">
+			<h4 class="mrgn-tp-0 text-danger">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h4>
+			<p>(Info goes here)</p>
+		</section>
+	</div>
+</section>
+
+<section>
+	<h3 id="media-list">Media list</h3>
+	<p>With a bit of extra markup, you can use media inside a list (useful for comment threads or articles lists).</p>
+	<ul class="media-list">
+		<li class="media">
+			<section>
+				<a class="pull-left" href="#">
+					<img class="media-object" src="http://placehold.it/64x64" alt="Generic placeholder image" />
+				</a>
+				<div class="media-body">
+					<h4 class="media-heading">Media heading</h4>
+					<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+
+					<!-- Nested media object -->
+					<section class="media">
+						<a class="pull-left" href="#">
+							<img class="media-object" src="http://placehold.it/64x64" alt="Generic placeholder image" />
+						</a>
+						<div class="media-body">
+							<h5 class="media-heading h4">Nested media heading</h5>
+							<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+
+							<!-- Nested media object -->
+							<section class="media">
+								<a class="pull-left" href="#">
+									<img class="media-object" src="http://placehold.it/64x64" alt="Generic placeholder image" />
+								</a>
+								<div class="media-body">
+									<h6 class="media-heading h4">Nested media heading</h6>
+									<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+								</div>
+							</section>
+						</div>
+					</section>
+
+					<!-- Nested media object -->
+					<section class="media">
+						<a class="pull-left" href="#">
+							<img class="media-object" src="http://placehold.it/64x64" alt="Generic placeholder image" />
+						</a>
+						<div class="media-body">
+							<h5 class="media-heading h4">Nested media heading</h5>
+							<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+						</div>
+					</section>
+				</div>
 			</section>
-
-			<section class="col-md-6 brdr-lft">
-				<h4 class="mrgn-tp-0 text-danger">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h4>
-				<p>(Info goes here)</p>
+		</li>
+		<li class="media">
+			<section>
+				<a class="pull-right" href="#">
+					<img class="media-object" src="http://placehold.it/64x64" alt="Generic placeholder image" />
+				</a>
+				<div class="media-body">
+					<h4 class="media-heading">Media heading</h4>
+					<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+				</div>
 			</section>
-		</div>
-	</section>
+		</li>
+	</ul>
 
-	<section>
-		<h3 id="media-list">Media list</h3>
-		<p>With a bit of extra markup, you can use media inside a list (useful for comment threads or articles lists).</p>
-		<ul class="media-list">
-			<li class="media">
-				<section>
-					<a class="pull-left" href="#">
-						<img class="media-object" src="http://placehold.it/64x64" alt="Generic placeholder image" />
-					</a>
-					<div class="media-body">
-						<h4 class="media-heading">Media heading</h4>
-						<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
-
-						<!-- Nested media object -->
-						<section class="media">
-							<a class="pull-left" href="#">
-								<img class="media-object" src="http://placehold.it/64x64" alt="Generic placeholder image" />
-							</a>
-							<div class="media-body">
-								<h5 class="media-heading h4">Nested media heading</h5>
-								<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
-
-								<!-- Nested media object -->
-								<section class="media">
-									<a class="pull-left" href="#">
-										<img class="media-object" src="http://placehold.it/64x64" alt="Generic placeholder image" />
-									</a>
-									<div class="media-body">
-										<h6 class="media-heading h4">Nested media heading</h6>
-										<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
-									</div>
-								</section>
-							</div>
-						</section>
-
-						<!-- Nested media object -->
-						<section class="media">
-							<a class="pull-left" href="#">
-								<img class="media-object" src="http://placehold.it/64x64" alt="Generic placeholder image" />
-							</a>
-							<div class="media-body">
-								<h5 class="media-heading h4">Nested media heading</h5>
-								<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
-							</div>
-						</section>
-					</div>
-				</section>
-			</li>
-			<li class="media">
-				<section>
-					<a class="pull-right" href="#">
-						<img class="media-object" src="http://placehold.it/64x64" alt="Generic placeholder image" />
-					</a>
-					<div class="media-body">
-						<h4 class="media-heading">Media heading</h4>
-						<p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
-					</div>
-				</section>
-			</li>
-		</ul>
-
-		<div class="mrgn-tp-lg">
-			<pre><code>&lt;ul class=&quot;media-list&quot;&gt;
+	<div class="mrgn-tp-lg">
+		<pre><code>&lt;ul class=&quot;media-list&quot;&gt;
 	&lt;li class=&quot;media&quot;&gt;
 		&lt;section&gt;
 			&lt;a class=&quot;pull-left&quot; href=&quot;#&quot;&gt;
@@ -477,20 +478,19 @@
 		&lt;/section&gt;
 	&lt;/li&gt;
 &lt;/ul&gt;</code></pre>
-		</div>
+	</div>
 
-		<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-			<section class="col-md-6">
-				<h4 class="mrgn-tp-0 text-success">Use when <span class="glyphicon glyphicon-ok-circle"></span></h4>
-				<p>(Info goes here)</p>
-			</section>
+	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+		<section class="col-md-6">
+			<h4 class="mrgn-tp-0 text-success">Use when <span class="glyphicon glyphicon-ok-circle"></span></h4>
+			<p>(Info goes here)</p>
+		</section>
 
-			<section class="col-md-6 brdr-lft">
-				<h4 class="mrgn-tp-0 text-danger">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h4>
-				<p>(Info goes here)</p>
-			</section>
-		</div>
-	</section>
+		<section class="col-md-6 brdr-lft">
+			<h4 class="mrgn-tp-0 text-danger">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h4>
+			<p>(Info goes here)</p>
+		</section>
+	</div>
 </section>
 
-<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span>Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
