--- a/site/pages/v4/design/blockquotes-en.hbs
+++ b/site/pages/v4/design/blockquotes-en.hbs
@@ -10,127 +10,131 @@
 <span class="wb-prettify all-pre"></span>
 
 <div class="row">
-	<section class="col-md-8">
-		<div class="panel panel-default">
-			<header class="panel-heading">
-				<h2 class="panel-title">Table of contents</h2>
-			</header>
-			<div class="panel-body">
-				<ul>
-					<li><a href="#description">Description</a></li>
-					<li><a href="#options">Blockquote options </a></li>
-				</ul>
-			</div>
-		</div>
-	</section>
-	
-	<section class="col-md-4 pull-right">
-		<div class="well">
-			<h2 class="h3 mrgn-tp-0">Related</h2>
-			<section>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
-				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
-					<li><a href="../accessibility/quotations-en.html">Quotations and language<span class="wb-inv"> - Accessibility guide</span></a></li>
-				</ul>
-			</section>
+    <section class="col-md-8">
+        <div class="panel panel-default">
+            <header class="panel-heading">
+                <h2 class="panel-title">Table of contents</h2>
+            </header>
+            <div class="panel-body">
+                <ul>
+                    <li><a href="#description">Description</a></li>
+                    <li><a href="#options">Blockquote options </a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
-			<section>
-				<h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
-				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
-					<li><a href="../writing/formatting-en.html#blockquotes">Blockquotes<span class="wb-inv"> - Writing guide</span></a></li>
-				</ul>
-			</section>
-		</div>
-	</section>
+    <section class="col-md-4 pull-right">
+        <div class="well">
+            <h2 class="h3 mrgn-tp-0">Related</h2>
+            <section>
+                <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</h3>
+                <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+                    <li><a href="../accessibility/quotations-en.html">Quotations and language<span class="wb-inv"> - Accessibility guide</span></a></li>
+                </ul>
+            </section>
+
+            <section>
+                <h3 class="h4"><span class="fa fa-font text-muted"></span>Writing guide</h3>
+                <ul class="list-unstyled mrgn-lft-lg lst-spcd">
+                    <li><a href="../writing/formatting-en.html#blockquotes">Blockquotes<span class="wb-inv"> - Writing guide</span></a></li>
+                </ul>
+            </section>
+        </div>
+    </section>
+</div>
+
+<section>
+    <h2 class="page-header" id="description">Description</h2>
+    <p>For quoting blocks of content from another source within your document.</p>
 </section>
 
 <section>
-	<h2 class="page-header" id="description">Description</h2>
-	<p>For quoting blocks of content from another source within your document.</p>
-</section>
+    <h2 class="page-header" id="options">Blockquote options</h2>
+    <p>
+        Wrap <code>&lt;blockquote&gt;</code> around any
+			<abbr title="HyperText Markup Language">HTML</abbr>
+        as the quote. For straight quotes, we recommend a <code>&lt;p&gt;</code>.
+    </p>
 
-<section>
-	<h2 class="page-header" id="options">Blockquote options</h2>
-	<p>Wrap <code>&lt;blockquote&gt;</code> around any <abbr title="HyperText Markup Language">HTML</abbr> as the quote. For straight quotes, we recommend a <code>&lt;p&gt;</code>.</p>
+    <blockquote>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+    </blockquote>
 
-	<blockquote>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-	</blockquote>
-
-	<div class="mrgn-tp-lg">
-		<pre><code>&lt;blockquote&gt;
+    <div class="mrgn-tp-lg">
+        <pre><code>&lt;blockquote&gt;
 	&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.&lt;/p&gt;
 &lt;/blockquote&gt;</code></pre>
-	</div>
+    </div>
 
-	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-		<section class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
-			<p>(Info goes here)</p>
-		</section>
+    <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+        <section class="col-md-6">
+            <h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
+            <p>(Info goes here)</p>
+        </section>
 
-		<section class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
-			<p>(Info goes here)</p>
-		</section>
-	</div>
+        <section class="col-md-6 brdr-lft">
+            <h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
+            <p>(Info goes here)</p>
+        </section>
+    </div>
 
-	<section>
-		<h3>Naming a source</h3>
-		<p>Add a <code>&lt;footer&gt;</code> for identifying the source. Wrap the name of the source work in <code>&lt;cite&gt;</code>.</p>
+    <section>
+        <h3>Naming a source</h3>
+        <p>Add a <code>&lt;footer&gt;</code> for identifying the source. Wrap the name of the source work in <code>&lt;cite&gt;</code>.</p>
 
-		<blockquote>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-			<footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
-		</blockquote>
+        <blockquote>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+        </blockquote>
 
-		<div class="mrgn-tp-lg">
-			<div>
-				<pre><code>&lt;blockquote&gt;
+        <div class="mrgn-tp-lg">
+
+            <pre><code>&lt;blockquote&gt;
 	&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.&lt;/p&gt;
 	&lt;footer&gt;Someone famous in &lt;cite title="Source Title"&gt;Source Title&lt;/cite&gt;&lt;/footer&gt;
 &lt;/blockquote&gt;</code></pre>
-		</div>
+        </div>
 
-		<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-			<section class="col-md-6">
-				<h4 class="mrgn-tp-0 text-success">Use when <span class="glyphicon glyphicon-ok-circle"></span></h4>
-				<p>(Info goes here)</p>
-			</section>
+        <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+            <section class="col-md-6">
+                <h4 class="mrgn-tp-0 text-success">Use when <span class="glyphicon glyphicon-ok-circle"></span></h4>
+                <p>(Info goes here)</p>
+            </section>
 
-			<section class="col-md-6 brdr-lft">
-				<h4 class="mrgn-tp-0 text-danger">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h4>
-				<p>(Info goes here)</p>
-			</section>
-		</div>
-	</section>
-	
-	<section>
-		<h3>Alternate displays</h3>
-		<p>Use <code>.blockquote-reverse</code> for a floated, right-aligned blockquote.</p>
+            <section class="col-md-6 brdr-lft">
+                <h4 class="mrgn-tp-0 text-danger">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h4>
+                <p>(Info goes here)</p>
+            </section>
+        </div>
+    </section>
 
-		<blockquote class="blockquote-reverse">
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-			<small>Someone famous in <cite title="Source Title">Source Title</cite></small>
-		</blockquote>
-		<div class="clearfix"></div>
+    <section>
+        <h3>Alternate displays</h3>
+        <p>Use <code>.blockquote-reverse</code> for a floated, right-aligned blockquote.</p>
 
-		<div class="mrgn-tp-lg">
-			<pre><code>&lt;blockquote class=&quot;blockquote-reverse&quot;&gt;
+        <blockquote class="blockquote-reverse">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+        </blockquote>
+        <div class="clearfix"></div>
+
+        <div class="mrgn-tp-lg">
+            <pre><code>&lt;blockquote class=&quot;blockquote-reverse&quot;&gt;
 	...
 &lt;/blockquote&gt;</code></pre>
-		</div>
+        </div>
 
-		<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-			<section class="col-md-6">
-				<h4 class="mrgn-tp-0 text-success">Use when <span class="glyphicon glyphicon-ok-circle"></span></h4>
-				<p>(Info goes here)</p>
-			</section>
+        <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+            <section class="col-md-6">
+                <h4 class="mrgn-tp-0 text-success">Use when <span class="glyphicon glyphicon-ok-circle"></span></h4>
+                <p>(Info goes here)</p>
+            </section>
 
-			<section class="col-md-6 brdr-lft">
-				<h4 class="mrgn-tp-0 text-danger"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h4>
-				<p>(Info goes here)</p>
-			</section>
-		</div>
-	</section>
+            <section class="col-md-6 brdr-lft">
+                <h4 class="mrgn-tp-0 text-danger">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h4>
+                <p>(Info goes here)</p>
+            </section>
+        </div>
+    </section>
 </section>
