--- a/site/pages/v4/design/grids-en.hbs
+++ b/site/pages/v4/design/grids-en.hbs
@@ -36,14 +36,14 @@
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related</h2>
 			<section>
-				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span>Design guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="reflow-en.html">Reflowing content around grids<span class="wb-inv"> - Design guide </span></a></li>
 				</ul>
 			</section>
 		</div>
 	</section>
-</section>
+</div>
 
 <section>
 	<h2 class="page-header" id="intro">Introduction</h2>
@@ -420,10 +420,10 @@
 			<div class="col-xs-6 col-sm-4">
 				<div class="well">.col-xs-6 .col-sm-4</div>
 			</div>
-   
+
 			<!-- Optional: clear the XS cols if their content doesn't match in height -->
 			<div class="clearfix visible-xs"></div>
-				<div class="col-xs-6 col-sm-4">
+			<div class="col-xs-6 col-sm-4">
 				<div class="well">.col-xs-6 .col-sm-4</div>
 			</div>
 		</div>
@@ -475,7 +475,10 @@
 	<div class="text-center">
 		<div class="row">
 			<div class="col-xs-6 col-sm-3">
-				<div class="well">.col-xs-6 .col-sm-3<br />Resize your viewport or check it out on your phone for an example.</div>
+				<div class="well">
+					.col-xs-6 .col-sm-3<br />
+					Resize your viewport or check it out on your phone for an example.
+				</div>
 			</div>
 			<div class="col-xs-6 col-sm-3">
 				<div class="well">.col-xs-6 .col-sm-3</div>
@@ -593,7 +596,7 @@
 	&lt;/div&gt;
 &lt;/div&gt;</code></pre>
 	</div>
- 
+
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
 		<section class="col-md-6">
 			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
@@ -619,7 +622,7 @@
 						<div class="well">Level 2: .col-md-6 </div>
 					</div>
 					<div class="col-md-6">
-						<div class="well"> Level 2: .col-md-6 </div>
+						<div class="well">Level 2: .col-md-6 </div>
 					</div>
 				</div>
 			</div>
@@ -674,7 +677,7 @@
 	&lt;div class=&quot;col-md-9 col-md-push-3&quot;&gt;.col-md-9 .col-md-push-3&lt;/div&gt;
 	&lt;div class=&quot;col-md-3 col-md-pull-9&quot;&gt;.col-md-3 .col-md-pull-9&lt;/div&gt;
 &lt;/div&gt;</code></pre>
-	</div> 
+	</div>
 </section>
 
-<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span>Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
