--- a/site/pages/v4/design/headings-en.hbs
+++ b/site/pages/v4/design/headings-en.hbs
@@ -31,14 +31,14 @@
 		<div class="well">
 			<h2 class="h3 mrgn-tp-0">Related </h2>
 			<section>
-				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span>Accessibility guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../accessibility/headings-en.html">Headings and page titles<span class="wb-inv"> - Accessibility guide </span></a></li>
 				</ul>
 			</section>
 
 			<section>
-				<h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+				<h3 class="h4"><span class="fa fa-font text-muted"></span>Writing guide</h3>
 				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
 					<li><a href="../writing/principals-en.html#heading">Heading principles<span class="wb-inv"> - Writing guide</span></a></li>
 					<li><a href="../writing/formatting-en.html#headings">Heading and subheading formatting<span class="wb-inv"> - Writing guide</span></a></li>
@@ -94,7 +94,7 @@
 		&lt;/section&gt;
 	&lt;/section&gt;
 &lt;/section&gt;</code></pre>
-	</section>
+	</div>
 
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
 		<section class="col-md-6">
@@ -107,9 +107,9 @@
 			<p>(Info goes here)</p>
 		</section>
 	</div>
- </section>
- 
- <section>
+</section>
+
+<section>
 	<h2 class="page-header" id="sizes">Sizes</h2>
 	<p><code>.h1</code>, <code>.h2</code>, <code>.h3</code>, <code>.h4</code>, <code>.h5</code>, <code>.h6</code> classes are available.</p>
 	<section>
@@ -263,7 +263,7 @@
 	&lt;/section&gt;
 &lt;/section&gt;</code></pre>
 	</div>
-	
+
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
 		<section class="col-md-6">
 			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
@@ -277,4 +277,4 @@
 	</div>
 </section>
 
-<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span>Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
