--- a/site/pages/v4/design/opacity-en.hbs
+++ b/site/pages/v4/design/opacity-en.hbs
@@ -40,62 +40,92 @@
 			<tr>
 				<td><code>opct-100</code></td>
 				<td>100% opacity</td>
-				<td><img class="opct-100" alt="demo image" src="http://placehold.it/140x140"></td>
-				<td><p class="opct-100">Text</p></td>
+				<td>
+					<img class="opct-100" alt="demo image" src="http://placehold.it/140x140"></td>
+				<td>
+					<p class="opct-100">Text</p>
+				</td>
 			</tr>
 			<tr>
 				<td><code>opct-90</code></td>
 				<td>90% opacity</td>
-				<td><img class="opct-90" alt="demo image" src="http://placehold.it/140x140"></td>
-				<td><p class="opct-90">Text</p></td>
+				<td>
+					<img class="opct-90" alt="demo image" src="http://placehold.it/140x140"></td>
+				<td>
+					<p class="opct-90">Text</p>
+				</td>
 			</tr>
 			<tr>
 				<td><code>opct-80</code></td>
 				<td>80% opacity</td>
-				<td><img class="opct-80" alt="demo image" src="http://placehold.it/140x140"></td>
-				<td><p class="opct-80">Text</p></td>
+				<td>
+					<img class="opct-80" alt="demo image" src="http://placehold.it/140x140"></td>
+				<td>
+					<p class="opct-80">Text</p>
+				</td>
 			</tr>
 			<tr>
 				<td><code>opct-70</code></td>
 				<td>70% opacity</td>
-				<td><img class="opct-70" alt="demo image" src="http://placehold.it/140x140"></td>
-				<td><p class="opct-70">Text</p></td>
+				<td>
+					<img class="opct-70" alt="demo image" src="http://placehold.it/140x140"></td>
+				<td>
+					<p class="opct-70">Text</p>
+				</td>
 			</tr>
 			<tr>
 				<td><code>opct-60</code></td>
 				<td>60% opacity</td>
-				<td><img class="opct-60" alt="demo image" src="http://placehold.it/140x140"></td>
-				<td><p class="opct-60">Text</p></td>
+				<td>
+					<img class="opct-60" alt="demo image" src="http://placehold.it/140x140"></td>
+				<td>
+					<p class="opct-60">Text</p>
+				</td>
 			</tr>
 			<tr>
 				<td><code>opct-50</code></td>
 				<td>50% opacity</td>
-				<td><img class="opct-50" alt="demo image" src="http://placehold.it/140x140"></td>
-				<td><p class="opct-50">Text</p></td>
+				<td>
+					<img class="opct-50" alt="demo image" src="http://placehold.it/140x140"></td>
+				<td>
+					<p class="opct-50">Text</p>
+				</td>
 			</tr>
 			<tr>
 				<td><code>opct-40</code></td>
 				<td>40% opacity</td>
-				<td><img class="opct-40" alt="demo image" src="http://placehold.it/140x140"></td>
-				<td><p class="opct-40">Text</p></td>
+				<td>
+					<img class="opct-40" alt="demo image" src="http://placehold.it/140x140"></td>
+				<td>
+					<p class="opct-40">Text</p>
+				</td>
 			</tr>
 			<tr>
 				<td><code>opct-30</code></td>
 				<td>30% opacity</td>
-				<td><img class="opct-30" alt="demo image" src="http://placehold.it/140x140"></td>
-				<td><p class="opct-30">Text</p></td>
+				<td>
+					<img class="opct-30" alt="demo image" src="http://placehold.it/140x140"></td>
+				<td>
+					<p class="opct-30">Text</p>
+				</td>
 			</tr>
 			<tr>
 				<td><code>opct-20</code></td>
 				<td>20% opacity</td>
-				<td><img class="opct-20" alt="demo image" src="http://placehold.it/140x140"></td>
-				<td><p class="opct-20">Text</p></td>
+				<td>
+					<img class="opct-20" alt="demo image" src="http://placehold.it/140x140"></td>
+				<td>
+					<p class="opct-20">Text</p>
+				</td>
 			</tr>
 			<tr>
 				<td><code>opct-10</code></td>
 				<td>10% opacity</td>
-				<td><img class="opct-10" alt="demo image" src="http://placehold.it/140x140"></td>
-				<td><p class="opct-10">Text</p></td>
+				<td>
+					<img class="opct-10" alt="demo image" src="http://placehold.it/140x140"></td>
+				<td>
+					<p class="opct-10">Text</p>
+				</td>
 			</tr>
 		</tbody>
 	</table>
@@ -109,3 +139,4 @@
 			<p>(Info goes here)</p>
 		</div>
 	</div>
+</div>
